Make kapt happy in unit tests